--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="%PUBLIC_URL%/style.css" />
-    <title>LWS Job Finder</title>
+    <title>Job Finder</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
